# tokumei-ikenbako

./: .env.template  .gitignore  README.md  deploy.sh  docker-compose.prod.yml  docker-compose.yml  init-letsencrypt.sh  install-docker.sh  integrated-test.py  requirements.txt
.devcontainer/: devcontainer.json  docker-compose.yml
.github/workflows/: deploy-production.yml  deploy-staging.yml
api/: Dockerfile  README.md  api.py  models.py  send_email.py  signer.py  test_crypto.py  test_models.py  test_signer.py
app/: .eslintrc.js  Dockerfile  package-lock.json  package.json  vue.config.js
app/public/: index.html
app/src/: App.vue  main.ts
app/src/assets/: main.scss  reset.scss
app/src/components/: BoolVote.vue  Button.vue  CheckView.vue  FreeVote.vue  LoadKey.vue  MailForm.vue  Progress.vue  StartView.vue  Title.vue  VoteView.vue
app/src/pages/: choose.vue  confirm.vue  done.vue  incubator.vue  index.vue  register.vue  registered.vue  vote.vue
crypto/: Dockerfile  build.sh  docker-compose.yml
crypto/core/: Cargo.toml
crypto/core/src/: lib.rs
crypto/sender/: Cargo.toml
crypto/sender/sender/: Cargo.toml
crypto/sender/src/: lib.rs
crypto/signer/: Cargo.toml
crypto/signer/src/: lib.rs
keys/: build.sh
proxy/: Dockerfile  dev.conf  prod.conf
