[package]
name = "crypto_core"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.7.3", features = ["wasm-bindgen"] }
rsa-fdh = "0.5.0"
rsa = "0.3.0"
sha2 = "0.9.0"
base64 = "0.12.2"
serde = { version = "1.0.113", features = ["derive"] }
serde_json = "1.0"
pem = "0.4"
